# vectis-plugins

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config
.github/workflows/: tests.yml
artifacts/: checksums.txt  checksums_intermediate.txt  cronkitty.wasm
contracts/avida/: Cargo.toml  README.md
contracts/avida/examples/: schema.rs
contracts/avida/schema/: avida-identity-plugin.json
contracts/avida/src/: contract.rs
contracts/cronkitty/: Cargo.toml  README.md
contracts/cronkitty/examples/: schema.rs
contracts/cronkitty/schema/: cronkitty.json
contracts/cronkitty/src/: contract.rs  error.rs  lib.rs
contracts/cronkitty/src/tests/: helpers.rs  mod.rs  tests.rs
cronkitty/: Cargo.toml  README.md
cronkitty/schema/: cronkitty.json
cronkitty/src/: contract.rs  error.rs  execute.rs  lib.rs  multitest.rs  types.rs
cronkitty/src/tests/: croncat_helpers.rs  helpers.rs  tests.rs
permission/: Cargo.toml
permission/src/: contract.rs  error.rs  lib.rs
scripts/: build.sh  upload.sh
