[workspace]
members = [ "contracts/*" ]
resolver = "2"


[profile.release.package.cronkitty]
codegen-units = 1
incremental = false

[profile.release.package.avida]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

