[package]
name = "cronkitty"
version = "0.2.1"
description = "A plugin for Vectis Wallet."
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/Nymlab/cronkitty"
homepage = "https://nymlab.it"
keywords = ["Vectis", "smart-contract-wallet", "account-abstration", "automation", "croncat"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library"]


[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = "0.2.1"
sylvia-derive = "0.2.1"
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0" }
cw2 = "1.0.1"
cw-utils = "1.0.1"
croncat-sdk-tasks =  "1.0.1" 
croncat-sdk-agents = "1.0.1" 
croncat-sdk-manager = "1.0.1" 
croncat-sdk-factory = "1.0.1" 
croncat-sdk-core = "1.0.1" 
vectis-wallet = { path = "../../../packages/vectis" }


[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
assert_matches = "1.5.0"
vectis-contract-tests = { path = "../../../packages/vectis-tests" }
croncat-tasks =  "1.0.1" 
croncat-agents = "1.0.1" 
croncat-manager = "1.0.1" 
croncat-factory = "1.0.1" 
