[package]
name = "permission"
version = "0.1.0"
description = "A plugin for Vectis Wallet."
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/Nymlab/cronkitty"
homepage = "https://nymlab.it"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = "0.2.1"
sylvia-derive = "0.2.1"
cw-storage-plus = "0.16"
thiserror = { version = "1.0" }
cw2 = "0.16"
cw-multi-test = { version = "0.16", optional = true }
anyhow = { version = "1", optional = true }
cw-utils = "0.16"

[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
assert_matches = "1.5.0"

