[package]
name = "cronkitty"
version = "0.1.0"
description = "A plugin for Vectis Wallet."
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/Nymlab/cronkitty"
homepage = "https://nymlab.it"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []


[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = "0.2.1"
sylvia-derive = "0.2.1"
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0" }
cw2 = "1.0.1"
cw-utils = "1.0.1"
croncat-sdk-tasks = "0.1.4"
croncat-sdk-agents= "0.1.4"
croncat-sdk-manager= "0.1.4"
croncat-sdk-factory= "0.1.4"
vectis-wallet = {git = "https://github.com/nymlab/vectis", rev = "ec26321"}
# vectis-wallet = { path = "../../../vectis/packages/vectis" }


[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
assert_matches = "1.5.0"
vectis-plugin-registry = {git = "https://github.com/nymlab/vectis", rev = "ec26321"}
vectis-contract-tests = {git = "https://github.com/nymlab/vectis", rev = "ec26321"}
# vectis-plugin-registry = { path = "../../../vectis/contracts/plugin_registry" }
# vectis-contract-tests = { path = "../../../vectis/packages/vectis-tests" }
croncat-agents = {git = "https://github.com/CronCats/cw-croncat/", branch = "beta-0.1.4"}
croncat-factory = {git = "https://github.com/CronCats/cw-croncat/", branch = "beta-0.1.4"}
croncat-manager = {git = "https://github.com/CronCats/cw-croncat/", branch = "beta-0.1.4"}
croncat-tasks = {git = "https://github.com/CronCats/cw-croncat/", branch = "beta-0.1.4"}

