[package]
name = "cronkitty"
version = "0.2.1"
description = "A plugin for Vectis Wallet."
authors = ["bwty <whalelephant@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/Nymlab/cronkitty"
homepage = "https://nymlab.it"
keywords = ["Vectis", "smart-contract-wallet", "account-abstration", "automation", "croncat"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []


[dependencies]
cosmwasm-std = { version = "1.1", features = ["staking"] }
cosmwasm-schema = "1.1"
schemars = "0.8"
serde = { version = "1", default-features = false, features = ["derive"] }
sylvia = "0.2.1"
sylvia-derive = "0.2.1"
cw-storage-plus = "1.0.1"
thiserror = { version = "1.0" }
cw2 = "1.0.1"
cw-utils = "1.0.1"
croncat-sdk-tasks =  { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-sdk-agents = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-sdk-manager = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-sdk-factory = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
vectis-wallet = {git = "https://github.com/nymlab/vectis", rev = "3a0542bbe"}
# vectis-wallet = { path = "../../../vectis/packages/vectis" }


[dev-dependencies]
anyhow = "1"
cw-multi-test = "0.16"
assert_matches = "1.5.0"
vectis-contract-tests = {git = "https://github.com/nymlab/vectis", rev = "3a0542bbe"}
#vectis-contract-tests = { path = "../../../vectis/packages/vectis-tests" }
croncat-tasks =  { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-agents = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-manager = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
croncat-factory = { git = "https://github.com/CronCats/cw-croncat/", rev = "339eeb4ecfa59a1de67066da5c5b9ae8fa26a5ac" } 
